[package]
name = "bombahead-rs"
version = "0.1.1"
description = "Rust SDK for building Bomberman bots that connect to a Bombahead game server over WebSockets."
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.8"
